--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint:fix": "eslint . --ext .ts --fix",
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "npm run lint && npm run build && npm run start"
+    "dev":  "nodemon --watch src --ext ts,json --exec 'npm run build && node dist/index.js'"
   },
   "repository": {
     "type": "git",
@@ -40,6 +40,8 @@
     "@types/mongoose": "^5.11.96",
     "@typescript-eslint/eslint-plugin": "^8.26.0",
     "@typescript-eslint/parser": "^8.26.0",
-    "eslint": "^8.57.1"
+    "eslint": "^8.57.1",
+    "nodemon": "^3.1.9",
+    "ts-node": "^10.9.2"
   }
 }
